--- a/config-client/turbine-prod.properties
+++ b/config-client/turbine-prod.properties
@@ -9,16 +9,14 @@ eureka.instance.instance-id=${eureka.instance.ip-address}:${server.port}
 eureka.instance.lease-expiration-duration-in-seconds=10
 eureka.instance.lease-renewal-interval-in-seconds=10
 
-#注册中心地址
-eureka.client.serviceUrl.defaultZone=http://192.168.109.128:19001/eureka/,http://192.168.109.128:19002/eureka/,http://192.168.109.128:19003/eureka/
-
 #配置中心消息总线配置
 spring.cloud.bus.trace.enabled=true
-#配置中心消息总线配置的mq配置
-spring.rabbitmq.host=192.168.109.128
-spring.rabbitmq.port=5672
-spring.rabbitmq.username=wiki
-spring.rabbitmq.password=wiki2012
+
+#数据库连接配置
+spring.datasource.url=jdbc:mysql://192.168.109.1:3306/spring-cloud-ram?useUnicode=true&characterEncoding=utf8&characterSetResults=utf8&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
 
 turbine.aggregator.clusterConfig=default
 turbine.appConfig=EUREKA-DEMO
