--- a/config-client/admin-test.properties
+++ b/config-client/admin-test.properties
@@ -21,18 +21,15 @@ eureka.instance.secure-port=${server.port}
 #eureka.instance.homePageUrl=https://${spring.cloud.client.ipAddress}:${http.port}
 #eureka.instance.health-check-url=https://${eureka.hostname}/health
 #拓展注册中心 默认进入swagger接口
-#eureka.instance.status-page-url=http://${eureka.instance.hostname}:${server.port}/swagger-ui.html
-
-#注册中心地址
-eureka.client.serviceUrl.defaultZone=http://192.168.109.128:19001/eureka/,http://192.168.109.128:19002/eureka/,http://192.168.109.128:19003/eureka/
 
 #配置中心消息总线配置
 spring.cloud.bus.trace.enabled=true
-#配置中心消息总线配置的mq配置
-spring.rabbitmq.host=192.168.109.128
-spring.rabbitmq.port=5672
-spring.rabbitmq.username=wiki
-spring.rabbitmq.password=wiki2012
+
+#数据库连接配置
+spring.datasource.url=jdbc:mysql://192.168.109.1:3306/spring-cloud-ram?useUnicode=true&characterEncoding=utf8&characterSetResults=utf8&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
 
 #设置hystrix超时时间，默认1000毫秒
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=10000
