--- a/config-client/oauth-test.properties
+++ b/config-client/oauth-test.properties
@@ -29,7 +29,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 security.oauth2.resource.filter-order=3
 
 feign.hystrix.enabled=true
-hystrix.command.default.execution.isolation.strategy=SEMAPHORE
+#hystrix.command.default.execution.isolation.strategy=SEMAPHORE
 
 #thymeleaf
 spring.thymeleaf.cache=false
