--- a/config-client-ico/zipkin-dev.properties
+++ b/config-client-ico/zipkin-dev.properties
@@ -2,6 +2,7 @@ hello=dev
 
 server.port=21041
 spring.application.name=zipkin
+spring.main.allow-bean-definition-overriding=true
 
 eureka.instance.prefer-ip-address=true
 eureka.instance.ip-address=10.1.10.212
