--- a/config-client/zipkin-dev.properties
+++ b/config-client/zipkin-dev.properties
@@ -15,7 +15,7 @@ spring.cloud.bus.trace.enabled=true
 
 #数据库配置
 spring.datasource.name=zipkin
-spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+#spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.url=jdbc:mysql://192.168.109.1:3306/egrand-zipkin?useUnicode=true&characterEncoding=utf8&characterSetResults=utf8&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=123456
@@ -24,18 +24,22 @@ spring.datasource.driverClassName=com.mysql.jdbc.Driver
 #ES Storage配置
 #zipkin.storage.type=mysql
 zipkin.storage.type=elasticsearch
-zipkin.storage.elasticsearch.cluster=elasticsearch
+zipkin.storage.StorageComponent=elasticsearch
+zipkin.storage.elasticsearch.cluster=docker-cluster
 zipkin.storage.elasticsearch.hosts=http://192.168.109.128:9200
 zipkin.storage.elasticsearch.index=zipkin
 zipkin.storage.elasticsearch.index-shards=5
 zipkin.storage.elasticsearch.index-replicas=1
 
 #zipkin配置参数
-zipkin.collector.rabbitmq.addresses=10.101.15.159:5672
-zipkin.collector.rabbitmq.password=wiki
-zipkin.collector.rabbitmq.username=wiki2012
+zipkin.collector.rabbitmq.addresses=192.168.109.128:5672
+zipkin.collector.rabbitmq.username=wiki
+zipkin.collector.rabbitmq.password=wiki2012
 zipkin.collector.rabbitmq.queue=zipkin
 
-#spring.sleuth.sampler.probability=1.0
+#表示当前程序不使用sleuth
+spring.sleuth.enabled=false
+spring.sleuth.sampler.percentage=1
+
 #zipkin启动报错无法访问的解决方法
 management.metrics.web.server.auto-time-requests=false
