--- a/config-client/common-dev.properties
+++ b/config-client/common-dev.properties
@@ -2,14 +2,14 @@
 eureka.client.serviceUrl.defaultZone=http://192.168.109.128:19001/eureka/,http://192.168.109.128:19002/eureka/,http://192.168.109.128:19003/eureka/
 
 #oauth2安全配置
-#security.oauth2.client.clientId=service-hi
-#security.oauth2.client.clientSecret=123456
-#security.oauth2.client.userAuthorizationUri=http://192.168.109.128:21032/oauth/authorize
-#security.oauth2.client.accessTokenUri=http://192.168.109.128:21032/oauth/token
-#security.oauth2.resource.token-info-uri=http://192.168.109.128:21032/oauth/check_token
-#security.oauth2.resource.user-info-uri=http://192.168.109.128:21032/users/current
-#egrand.client.oauth2.admin.client-id=service-hi
-#egrand.client.oauth2.admin.client-secret=123456
+security.oauth2.client.clientId=service-hi
+security.oauth2.client.clientSecret=123456
+security.oauth2.client.userAuthorizationUri=http://192.168.109.128:21032/oauth/authorize
+security.oauth2.client.accessTokenUri=http://192.168.109.128:21032/oauth/token
+security.oauth2.resource.token-info-uri=http://192.168.109.128:21032/oauth/check_token
+security.oauth2.resource.user-info-uri=http://192.168.109.128:21032/users/current
+egrand.client.oauth2.admin.client-id=service-hi
+egrand.client.oauth2.admin.client-secret=123456
 
 management.health.elasticsearch.enabled=false
 
